--- a/views/creditrecordupdate.pug
+++ b/views/creditrecordupdate.pug
@@ -111,7 +111,7 @@ head
                     th Customer                   
                     th Product                   
                     th Qty,tonnes
-                    th Sale
+                    th Agent
                     th Total (shs)
                     th Comments
                     th Edit
@@ -124,7 +124,7 @@ head
                       td #{user.customername}                      
                       td #{user.pdct}                                             
                       td #{user.quantity}
-                      td #{user.sale_type}
+                      td #{user.agent}
                       td #{new Intl.NumberFormat().format(user.total)} 
                       td  #{user.comments}
                       td
