--- a/views/editcreditsales.pug
+++ b/views/editcreditsales.pug
@@ -156,16 +156,11 @@ head
                       label.form-label Total Amount (shs):
                       input#txtresult(type='Float' name='total' placeholder='*Amount(shs).' value=user.total)
                     .align
-                      label.form-label  Sale Type:
-                      select(name='sale_type' )
-                        option(value='Credit')
-                          | Sale type.                        
-                        option(value='Credit') Credit
-                      .invalid-feedback
-                        | Please enter a sale type
+                      label.form-label  Agent name:
+                      input#txtresult(type='text' name='agent'  value=user.agent)
                     .align
                       label.form-label Comments:
-                      textarea#comments(type='text' name='comments' placeholder='*Comments on Sale.' rows='5' cols='33' value=user.comments)
+                      input#comments(type='text' name='comments' placeholder='*Comments on Sale.' rows='5' cols='33' value=user.comments)
                       .invalid-feedback
                         | Please enter a valid comment
                   .col.col-md-12
