--- a/views/purchasesrecord.pug
+++ b/views/purchasesrecord.pug
@@ -134,9 +134,10 @@ head
                 tr 
                   td 
                   td 
+                  td
                   td 
                   td 
-                  td Total Purchases
+                  td Totals
                   td #{new Intl.NumberFormat().format(total.totalpurchases)} 
                      
               .col.col-md-12              
