--- a/views/salesinput.pug
+++ b/views/salesinput.pug
@@ -160,7 +160,7 @@ head
                       input#txtresult(type='Float' name='total' placeholder='*Amount(shs).' )
                     .align
                       label.form-label Sales Agent:
-                      input(type='text' name='agent' readonly placeholder='Agent name' value=user.firstname+ user.secondname )
+                      input(type='text' name='agent' readonly placeholder='Agent name' value=user.firstname )
                     
                     .align
                       label.form-label Comments:
